[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authlete"
version = "1.3.0"
dependencies = [
  "requests"
]
requires-python = ">= 3.8"
authors = [
  { name = "Authlete, Inc.", email = "admin@authlete.com" }
]
description = "Python library for Authlete"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
  "OAuth",
  "OAuth 2.0",
  "OpenID",
  "OpenID Connect",
  "OIDC"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Security"
]

[project.urls]
Homepage = "https://www.authlete.com/"
Repository = "https://github.com/authlete/authlete-python.git"
